--- a/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.chartlegenddata.yml
+++ b/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.chartlegenddata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartLegendData:interface'
-    summary: <span data-ttu-id="e3ac0-101">描述通过调用返回的数据的接口`chartLegend.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="e3ac0-101">An interface describing the data returned by calling `chartLegend.toJSON()`</span></span><!-- --><span data-ttu-id="e3ac0-102">.</span><span class="sxs-lookup"><span data-stu-id="e3ac0-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`chartLegend.toJSON()`<!-- -->.
     name: Excel.Interfaces.ChartLegendData
     fullName: Excel.Interfaces.ChartLegendData
     langs:
@@ -15,9 +15,9 @@ items:
       - 'excel!Excel.Interfaces.ChartLegendData#visible:member'
   - uid: 'excel!Excel.Interfaces.ChartLegendData#format:member'
     summary: |-
-      <span data-ttu-id="e3ac0-103">表示图表图例的格式，包括填充和字体格式。</span><span class="sxs-lookup"><span data-stu-id="e3ac0-103">Represents the formatting of a chart legend, which includes fill and font formatting.</span></span> <span data-ttu-id="e3ac0-104">只读。</span><span class="sxs-lookup"><span data-stu-id="e3ac0-104">Read-only.</span></span>
+      表示图表图例的格式，包括填充和字体格式。
 
-      <span data-ttu-id="e3ac0-105">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e3ac0-105">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -30,9 +30,9 @@ items:
           - 'excel!Excel.Interfaces.ChartLegendFormatData:interface'
   - uid: 'excel!Excel.Interfaces.ChartLegendData#overlay:member'
     summary: |-
-      <span data-ttu-id="e3ac0-106">表示图表图例是否应该与图表的主体重叠的布尔值。</span><span class="sxs-lookup"><span data-stu-id="e3ac0-106">Boolean value for whether the chart legend should overlap with the main body of the chart.</span></span>
+      指定图表图例是否应与图表的主体重叠。
 
-      <span data-ttu-id="e3ac0-107">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e3ac0-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: overlay
     fullName: overlay
     langs:
@@ -45,9 +45,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartLegendData#position:member'
     summary: |-
-      <span data-ttu-id="e3ac0-108">表示图例在图表上的位置。</span><span class="sxs-lookup"><span data-stu-id="e3ac0-108">Represents the position of the legend on the chart.</span></span> <span data-ttu-id="e3ac0-109">有关详细信息，请参阅 ChartLegendPosition。</span><span class="sxs-lookup"><span data-stu-id="e3ac0-109">See Excel.ChartLegendPosition for details.</span></span>
+      指定图例在图表上的位置。 有关详细信息，请参阅 ChartLegendPosition。
 
-      <span data-ttu-id="e3ac0-110">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e3ac0-110">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: position
     fullName: position
     langs:
@@ -60,9 +60,9 @@ items:
           - 'excel!Excel.Interfaces.ChartLegendData#position~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartLegendData#visible:member'
     summary: |-
-      <span data-ttu-id="e3ac0-111">表示 ChartLegend 对象是否可见的布尔值。</span><span class="sxs-lookup"><span data-stu-id="e3ac0-111">A boolean value the represents the visibility of a ChartLegend object.</span></span>
+      指定 ChartLegend 是否可见。
 
-      <span data-ttu-id="e3ac0-112">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e3ac0-112">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
     fullName: visible
     langs:
