--- a/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.chartlegendformatdata.yml
+++ b/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.chartlegendformatdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartLegendFormatData:interface'
-    summary: <span data-ttu-id="f3055-101">描述通过调用返回的数据的接口`chartLegendFormat.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="f3055-101">An interface describing the data returned by calling `chartLegendFormat.toJSON()`</span></span><!-- --><span data-ttu-id="f3055-102">.</span><span class="sxs-lookup"><span data-stu-id="f3055-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`chartLegendFormat.toJSON()`<!-- -->.
     name: Excel.Interfaces.ChartLegendFormatData
     fullName: Excel.Interfaces.ChartLegendFormatData
     langs:
@@ -12,9 +12,9 @@ items:
       - 'excel!Excel.Interfaces.ChartLegendFormatData#font:member'
   - uid: 'excel!Excel.Interfaces.ChartLegendFormatData#font:member'
     summary: |-
-      <span data-ttu-id="f3055-103">表示图表图例的字体属性，例如字体名称、字体大小、颜色等。</span><span class="sxs-lookup"><span data-stu-id="f3055-103">Represents the font attributes such as font name, font size, color, etc. of a chart legend.</span></span> <span data-ttu-id="f3055-104">只读。</span><span class="sxs-lookup"><span data-stu-id="f3055-104">Read-only.</span></span>
+      表示图表图例的字体属性，例如字体名称、字体大小、颜色等。
 
-      <span data-ttu-id="f3055-105">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f3055-105">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
     fullName: font
     langs:
