--- a/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.chartaxistitledata.yml
+++ b/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.chartaxistitledata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartAxisTitleData:interface'
-    summary: <span data-ttu-id="e00ff-101">描述通过调用返回的数据的接口`chartAxisTitle.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="e00ff-101">An interface describing the data returned by calling `chartAxisTitle.toJSON()`</span></span><!-- --><span data-ttu-id="e00ff-102">.</span><span class="sxs-lookup"><span data-stu-id="e00ff-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`chartAxisTitle.toJSON()`<!-- -->.
     name: Excel.Interfaces.ChartAxisTitleData
     fullName: Excel.Interfaces.ChartAxisTitleData
     langs:
@@ -14,9 +14,9 @@ items:
       - 'excel!Excel.Interfaces.ChartAxisTitleData#visible:member'
   - uid: 'excel!Excel.Interfaces.ChartAxisTitleData#format:member'
     summary: |-
-      <span data-ttu-id="e00ff-103">表示图表坐标轴标题的格式。</span><span class="sxs-lookup"><span data-stu-id="e00ff-103">Represents the formatting of chart axis title.</span></span> <span data-ttu-id="e00ff-104">只读。</span><span class="sxs-lookup"><span data-stu-id="e00ff-104">Read-only.</span></span>
+      指定图表坐标轴标题的格式。
 
-      <span data-ttu-id="e00ff-105">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e00ff-105">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -29,9 +29,9 @@ items:
           - 'excel!Excel.Interfaces.ChartAxisTitleFormatData:interface'
   - uid: 'excel!Excel.Interfaces.ChartAxisTitleData#text:member'
     summary: |-
-      <span data-ttu-id="e00ff-106">表示坐标轴标题。</span><span class="sxs-lookup"><span data-stu-id="e00ff-106">Represents the axis title.</span></span>
+      指定轴标题。
 
-      <span data-ttu-id="e00ff-107">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e00ff-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: text
     fullName: text
     langs:
@@ -44,9 +44,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ChartAxisTitleData#visible:member'
     summary: |-
-      <span data-ttu-id="e00ff-108">指定坐标轴标题是否可见的布尔值。</span><span class="sxs-lookup"><span data-stu-id="e00ff-108">A boolean that specifies the visibility of an axis title.</span></span>
+      指定轴标题是否为 shape.visibile。
 
-      <span data-ttu-id="e00ff-109">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e00ff-109">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
     fullName: visible
     langs:
