--- a/docs/docs-ref-autogen/excel_1_3/excel/excel.chartfont.yml
+++ b/docs/docs-ref-autogen/excel_1_3/excel/excel.chartfont.yml
@@ -2,21 +2,21 @@
 items:
   - uid: 'excel!Excel.ChartFont:class'
     summary: |-
-      <span data-ttu-id="9a47f-101">此对象表示 chart 对象的字体属性（字体名称、字体大小、颜色等）。</span><span class="sxs-lookup"><span data-stu-id="9a47f-101">This object represents the font attributes (font name, font size, color, etc.) for a chart object.</span></span>
+      此对象表示 chart 对象的字体属性（字体名称、字体大小、颜色等）。
 
-      <span data-ttu-id="9a47f-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9a47f-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ChartFont
     fullName: Excel.ChartFont
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     remarks: |-
 
 
-      #### <a name="examples"></a><span data-ttu-id="9a47f-103">示例</span><span class="sxs-lookup"><span data-stu-id="9a47f-103">Examples</span></span>
+      #### <a name="examples"></a>示例
 
       ```javascript
       // Set chart title to be Calbri, size 10, bold and in red. 
@@ -52,9 +52,9 @@ items:
       - 'excel!Excel.ChartFont#underline:member'
   - uid: 'excel!Excel.ChartFont#bold:member'
     summary: |-
-      <span data-ttu-id="9a47f-104">表示字体的加粗状态。</span><span class="sxs-lookup"><span data-stu-id="9a47f-104">Represents the bold status of font.</span></span>
+      表示字体的加粗状态。
 
-      <span data-ttu-id="9a47f-105">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9a47f-105">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: bold
     fullName: bold
     langs:
@@ -67,9 +67,9 @@ items:
           - boolean
   - uid: 'excel!Excel.ChartFont#color:member'
     summary: |-
-      <span data-ttu-id="9a47f-106">文本颜色的 HTML 颜色代码表示。</span><span class="sxs-lookup"><span data-stu-id="9a47f-106">HTML color code representation of the text color.</span></span> <span data-ttu-id="9a47f-107">例如，</span><span class="sxs-lookup"><span data-stu-id="9a47f-107">E.g.</span></span> <span data-ttu-id="9a47f-108">\#FF0000 表示红色。</span><span class="sxs-lookup"><span data-stu-id="9a47f-108">\#FF0000 represents Red.</span></span>
+      文本颜色的 HTML 颜色代码表示形式（例如， \#FF0000 表示红色）。
 
-      <span data-ttu-id="9a47f-109">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9a47f-109">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: color
     fullName: color
     langs:
@@ -81,7 +81,7 @@ items:
         type:
           - string
   - uid: 'excel!Excel.ChartFont#context:member'
-    summary: <span data-ttu-id="9a47f-110">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="9a47f-110">The request context associated with the object.</span></span> <span data-ttu-id="9a47f-111">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="9a47f-111">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -94,9 +94,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.ChartFont#italic:member'
     summary: |-
-      <span data-ttu-id="9a47f-112">表示字体的斜体状态。</span><span class="sxs-lookup"><span data-stu-id="9a47f-112">Represents the italic status of the font.</span></span>
+      表示字体的斜体状态。
 
-      <span data-ttu-id="9a47f-113">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9a47f-113">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: italic
     fullName: italic
     langs:
@@ -108,7 +108,7 @@ items:
         type:
           - boolean
   - uid: 'excel!Excel.ChartFont#load:member(1)'
-    summary: <span data-ttu-id="9a47f-114">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="9a47f-114">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="9a47f-115">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="9a47f-115">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -122,11 +122,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="9a47f-116">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="9a47f-116">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.Interfaces.ChartFontLoadOptions:interface'
   - uid: 'excel!Excel.ChartFont#load:member(2)'
-    summary: <span data-ttu-id="9a47f-117">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="9a47f-117">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="9a47f-118">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="9a47f-118">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -140,11 +140,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="9a47f-119">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="9a47f-119">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.ChartFont#load:member(3)'
-    summary: <span data-ttu-id="9a47f-120">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="9a47f-120">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="9a47f-121">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="9a47f-121">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -162,7 +162,7 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="9a47f-122">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="9a47f-122">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
             - |-
               {
@@ -171,9 +171,9 @@ items:
                       }
   - uid: 'excel!Excel.ChartFont#name:member'
     summary: |-
-      <span data-ttu-id="9a47f-123">字体名称（例如"Calibri"）</span><span class="sxs-lookup"><span data-stu-id="9a47f-123">Font name (e.g. "Calibri")</span></span>
+      字体名称（例如，"Calibri"）
 
-      <span data-ttu-id="9a47f-124">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9a47f-124">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -185,9 +185,9 @@ items:
         type:
           - string
   - uid: 'excel!Excel.ChartFont#set:member(1)'
-    summary: '<span data-ttu-id="9a47f-125">同时设置一个对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="9a47f-125">Sets multiple properties of an object at the same time.</span></span> <span data-ttu-id="9a47f-126">您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。</span><span class="sxs-lookup"><span data-stu-id="9a47f-126">You can pass either a plain object with the appropriate properties, or another API object of the same type.</span></span>'
+    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
-      <span data-ttu-id="9a47f-127">此方法具有以下附加签名：</span><span class="sxs-lookup"><span data-stu-id="9a47f-127">This method has the following additional signature:</span></span>
+      此方法具有以下附加签名：
 
       `set(properties: Excel.ChartFont): void`
     name: 'set(properties, options)'
@@ -203,15 +203,15 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: <span data-ttu-id="9a47f-128">一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="9a47f-128">A JavaScript object with properties that are structured isomorphically to the properties of the object on which the method is called.</span></span>
+          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
           type:
             - 'excel!Excel.Interfaces.ChartFontUpdateData:interface'
         - id: options
-          description: <span data-ttu-id="9a47f-129">提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。</span><span class="sxs-lookup"><span data-stu-id="9a47f-129">Provides an option to suppress errors if the properties object tries to set any read-only properties.</span></span>
+          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.ChartFont#set:member(2)'
-    summary: '<span data-ttu-id="9a47f-130">基于现有加载的对象同时设置该对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="9a47f-130">Sets multiple properties on the object at the same time, based on an existing loaded object.</span></span>'
+    summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
     fullName: set(properties)
     langs:
@@ -230,9 +230,9 @@ items:
             - 'excel!Excel.ChartFont:class'
   - uid: 'excel!Excel.ChartFont#size:member'
     summary: |-
-      <span data-ttu-id="9a47f-131">字号（例如，11）</span><span class="sxs-lookup"><span data-stu-id="9a47f-131">Size of the font (e.g. 11)</span></span>
+      字体大小（例如，11）
 
-      <span data-ttu-id="9a47f-132">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9a47f-132">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: size
     fullName: size
     langs:
@@ -244,7 +244,7 @@ items:
         type:
           - number
   - uid: 'excel!Excel.ChartFont#toJSON:member(1)'
-    summary: '<span data-ttu-id="9a47f-133">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="9a47f-133">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="9a47f-134">.</span><span class="sxs-lookup"><span data-stu-id="9a47f-134"></span></span> <span data-ttu-id="9a47f-135">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="9a47f-135"></span></span><!-- --><span data-ttu-id="9a47f-136">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ChartFont 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ChartFontData`</span><span class="sxs-lookup"><span data-stu-id="9a47f-136">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.ChartFont object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.ChartFontData`</span></span><!-- --><span data-ttu-id="9a47f-137">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="9a47f-137">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ChartFont 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ChartFontData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -258,9 +258,9 @@ items:
         description: ''
   - uid: 'excel!Excel.ChartFont#underline:member'
     summary: |-
-      <span data-ttu-id="9a47f-138">应用于字体的下划线类型。</span><span class="sxs-lookup"><span data-stu-id="9a47f-138">Type of underline applied to the font.</span></span> <span data-ttu-id="9a47f-139">有关详细信息，请参阅 ChartUnderlineStyle。</span><span class="sxs-lookup"><span data-stu-id="9a47f-139">See Excel.ChartUnderlineStyle for details.</span></span>
+      应用于字体的下划线类型。 有关详细信息，请参阅 ChartUnderlineStyle。
 
-      <span data-ttu-id="9a47f-140">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9a47f-140">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: underline
     fullName: underline
     langs:
@@ -272,7 +272,7 @@ items:
         type:
           - 'excel!Excel.ChartFont#underline~0:complex'
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -282,7 +282,7 @@ references:
     name: Excel.Interfaces.ChartFontLoadOptions
   - uid: 'excel!Excel.Interfaces.ChartFontUpdateData:interface'
     name: Interfaces.ChartFontUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.ChartFontData:interface'
     name: Excel.Interfaces.ChartFontData
